# dangling-chickens

./: attackskills.csv  colourtext.py  combat_engine.py  dungeonlevel.csv  entities.py  generate_map.py  in_combat.py  inventory.py  items.csv  killlist.py  loot.csv  main.py  monster.py  monsters.csv  player.py  pyproject.toml
data/: dungeonlevel.csv  weapons.csv
maps/: map_01.map  map_02.map
