[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Matt D <mdonovan.nmkac@gmail.com>"]
description = ""
name = "ultimateweakdeletions"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
readchar = "^2.0"
[tool.poetry.dev-dependencies]
